Upgraded dependencies & tests to work on latest JDK