@@ -13,7 +13,6 @@ plugins {
     id 'maven-publish'
 }
 
-
 group = "com.vonage"
 archivesBaseName = "client"
 version = "6.4.0"
@@ -30,28 +29,27 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-    implementation 'commons-codec:commons-codec:1.9'
+    implementation 'commons-codec:commons-codec:1.15'
     implementation 'commons-logging:commons-logging:1.2'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.8'
-    implementation 'commons-io:commons-io:2.5'
-    implementation 'org.apache.commons:commons-lang3:3.5'
-    compileOnly 'javax.servlet:javax.servlet-api:3.1.0'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.9'
-    implementation 'io.openapitools.jackson.dataformat:jackson-dataformat-hal:1.0.4'
-    implementation 'javax.xml.bind:jaxb-api:2.3.0'
-    implementation "com.nexmo:jwt:1.0.1"
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
+    implementation 'io.openapitools.jackson.dataformat:jackson-dataformat-hal:1.0.9'
+    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+    implementation 'com.nexmo:jwt:1.0.1'
 
-    testImplementation  "javax.servlet:javax.servlet-api:3.1.0"
-    testImplementation  'junit:junit:4.4'
-    testImplementation  "org.mockito:mockito-core:2.25.1"
+    testImplementation 'javax.servlet:javax.servlet-api:4.0.1'
+    testImplementation  'junit:junit:4.13.2'
+    testImplementation  'org.mockito:mockito-inline:4.4.0'
     testImplementation  'org.hamcrest:hamcrest-all:1.3'
-    testImplementation 'org.springframework:spring-test:5.3.5'
-    testImplementation 'org.springframework:spring-web:5.3.4'
-    testImplementation  group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.7'
-    testImplementation  group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.7'
+    testImplementation 'org.springframework:spring-test:5.3.17'
+    testImplementation 'org.springframework:spring-web:5.3.17'
 }
 
 test {
+    jvmArgs "--illegal-access=warn"
     testLogging {
         events "failed"
         exceptionFormat "full"
@@ -72,7 +70,7 @@ javadoc {
 jar {
     manifest {
         attributes(
-                "Created-By": 'Vonage',
+                'Created-By': 'Vonage',
                 'Implementation-Vendor': 'Vonage',
                 'Implementation-Title': 'Vonage Java Server SDK',
                 'Implementation-Version': archiveVersion
@@ -92,7 +90,7 @@ task sourcesJar(type: Jar) {
 }
 
 jacoco {
-    toolVersion = "0.8.5"
+    toolVersion = "0.8.8"
 }
 
 jacocoTestReport {
@@ -135,15 +133,15 @@ publishing {
                     url = "http://github.com:Vonage/vonage-java-sdk"
                 }
 
-                issueManagement{
+                issueManagement {
                     system = "GitHub"
                     url = "https://github.com/vonage/vonage-java-sdk/issues"
                 }
             }
         }
     }
-    repositories{
-        maven{
+    repositories {
+        maven {
             def releasesRepoUrl = uri("https://oss.sonatype.org/service/local/staging/deploy/maven2/")
             def snapshotsRepoUrl = uri("https://oss.sonatype.org/content/repositories/snapshots/")
             credentials.username(System.getenv("OSS_USERNAME"))
